--- a/json-formatter.html
+++ b/json-formatter.html
@@ -283,12 +283,12 @@
 
             <h4 class="h4" style="margin:10px 0 6px 0;">Does this send JSON to a server?</h4>
             <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">
-              No — formatting and validation run locally in your browser.
+              No. Formatting and validation run locally in your browser.
             </p>
 
             <h4 class="h4" style="margin:10px 0 6px 0;">Can it handle large JSON?</h4>
             <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">
-              Yes, up to your browser’s memory limits. If a payload is huge, try minify/pretty print in steps.
+              Yes. Up to your browser’s memory limits. If a payload is huge, try minify/pretty print in steps.
             </p>
 
             <h4 class="h4" style="margin:10px 0 6px 0;">Why “validate” fails when it looks like JSON?</h4>
