--- a/json-formatter.html
+++ b/json-formatter.html
@@ -247,7 +247,7 @@
         </section>
 
         <!-- FIX: About card is INSIDE .wrap, so it lines up with the grid/cards above -->
-        <section class="card" style="margin:16px 0 26px;">
+        <section class="card" 
           <div class="pad">
 
             <h2 class="h2" style="margin:0 0 8px 0;">About this tool</h2>
