--- a/json-formatter.html
+++ b/json-formatter.html
@@ -292,9 +292,7 @@
             </p>
 
             <h4 class="h4" style="margin:10px 0 6px 0;">Why “validate” fails when it looks like JSON?</h4>
-            <p class="muted" style="margin:0; line-height:1.6;">
-              JSON is stricter than JavaScript objects (double quotes, no trailing commas, no comments). One invalid character will fail strict parsing.
-            </p>
+            <p class="muted" style="margin:0; line-height:1.6;">JSON is stricter than JavaScript objects (double quotes, no trailing commas, no comments). One invalid character will fail strict parsing.</p>
 
           </div>
         </section>
