--- a/jwt-decoder.html
+++ b/jwt-decoder.html
@@ -95,6 +95,10 @@
     .msg.ok{color:#5cff9d}
     .msg.bad{color:#ff6b6b}
     .muted2{color:var(--muted);font-size:12.5px;line-height:1.55}
+
+	main{
+  flex:0;
+}
   </style>
 
   <script>
