--- a/csp-analyzer.html
+++ b/csp-analyzer.html
@@ -198,16 +198,16 @@
         </section>
         <section class="card">
           <div class="pad">
-            <div class="h1">Review CSP and Security Headers with Clear Findings</div>
-
-            <div class="muted" style="margin-top:10px">
+           
+            <h2 class="h2" style="margin:0 0 8px 0;">About this tool</h2>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
               This free online CSP analyzer parses <span class="mono">Content-Security-Policy</span> directives and common response security headers, normalizes sources, and flags patterns that weaken protections against XSS, clickjacking, and injection paths. Paste a CSP header or a full response header block and get severity-scored findings plus an exportable report — processing is local-only in your browser with no uploads.
-            </div>
+            </p>
 
             <div class="hr"></div>
 
-            <div class="h2">Common Use Cases</div>
-            <ul class="list" style="margin-top:8px">
+            <h3 class="h3" style="margin:14px 0 8px 0;">Common use cases</h3>
+            <ul class="muted" style="margin:0 0 12px 18px; line-height:1.7;">
               <li>Validate a CSP change before deploying to production</li>
               <li>Quickly assess security posture during incident response or triage</li>
               <li>Review third-party integrations for overly-broad allowlists</li>
@@ -217,34 +217,24 @@
 
             <div class="hr"></div>
 
-            <div class="h2">How It Works</div>
-            <div class="muted" style="margin-top:8px">
+            <h3 class="h3" style="margin:14px 0 8px 0;">How it works</h3>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
               Input is parsed client-side. CSP directives are tokenized into sources/keywords, whitespace is normalized, and each directive is evaluated against a ruleset to produce findings (High/Medium/Low/Info). If you paste full response headers, the analyzer extracts CSP and also evaluates other common hardening headers alongside it. The “Parsed” view shows normalized directives and token mapping so you can verify exactly what the browser would interpret.
-            </div>
+            </p>
 
             <div class="hr"></div>
 
-            <div class="h2">What It Flags</div>
-            <ul class="list" style="margin-top:8px">
-              <li><span class="mono">'unsafe-inline'</span> and <span class="mono">'unsafe-eval'</span> in script/style policies</li>
-              <li>Wildcard / overly-broad sources and permissive defaults</li>
-              <li>Missing or weak <span class="mono">frame-ancestors</span> and other clickjacking protections</li>
-              <li>Risky allowlists (e.g., <span class="mono">data:</span>, <span class="mono">blob:</span>, unbounded third-party origins)</li>
-              <li>Inconsistent directives that undermine the intended policy</li>
-            </ul>
+            <h3 class="h3" style="margin:14px 0 8px 0;">FAQ</h3>
 
-            <div class="hr"></div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Does this tool upload my headers or CSP?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">No. Analysis runs locally in your browser and nothing is sent to a backend.</p>
 
-            <div class="h2">Frequently Asked Questions</div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Can I paste full response headers instead of only CSP?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">Yes. Paste the header block and the analyzer will extract CSP and evaluate other common security headers.</p>
 
-            <div class="h3" style="margin-top:10px">Does this tool upload my headers or CSP?</div>
-            <div class="muted" style="margin-top:6px">No. Analysis runs locally in your browser and nothing is sent to a backend.</div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Why are <span class="mono">'unsafe-inline'</span> / <span class="mono">'unsafe-eval'</span> flagged?</h4>
+            <p class="muted" style="margin:0; line-height:1.6;">They weaken script/style restrictions and can open injection paths. Prefer nonces/hashes and narrower sources.</p>
 
-            <div class="h3" style="margin-top:10px">Can I paste full response headers instead of only CSP?</div>
-            <div class="muted" style="margin-top:6px">Yes. Paste the header block and the analyzer will extract CSP and evaluate other common security headers.</div>
-
-            <div class="h3" style="margin-top:10px">Why are <span class="mono">'unsafe-inline'</span> / <span class="mono">'unsafe-eval'</span> flagged?</div>
-            <div class="muted" style="margin-top:6px">They weaken script/style restrictions and can open injection paths. Prefer nonces/hashes and narrower sources.</div>
           </div>
         </section>
 
