--- a/hash-generator.html
+++ b/hash-generator.html
@@ -216,18 +216,16 @@
 
         <section class="card">
           <div class="pad">
-            <div class="h1">Generate Hashes and Encode/Decode Safely (Local-Only)</div>
-
-            <div class="muted" style="margin-top:10px">
-              This free online hash generator produces common digests and encodings directly in your browser. Use it to generate
-              MD5, SHA-1, SHA-256, SHA-384, SHA-512, and HMAC-SHA256, plus Base64 and URL/Hex/HTML/ROT13 transforms.
-              Everything runs client-side — no uploads and no server-side processing.
-            </div>
+		  
+                 <h2 class="h2" style="margin:0 0 8px 0;">About this tool</h2>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
+              This free online hash generator produces common digests and encodings directly in your browser. Use it to generate MD5, SHA-1, SHA-256, SHA-384, SHA-512, and HMAC-SHA256, plus Base64 and URL/Hex/HTML/ROT13 transforms. Everything runs client-side — no uploads and no server-side processing.
+            </p>
 
             <div class="hr"></div>
 
-            <div class="h2">Common Use Cases</div>
-            <ul class="list" style="margin-top:8px">
+            <h3 class="h3" style="margin:14px 0 8px 0;">Common use cases</h3>
+            <ul class="muted" style="margin:0 0 12px 18px; line-height:1.7;">
               <li>Create checksums to compare two payloads or verify a download</li>
               <li>Generate SHA-256 digests for API signing workflows and integrity checks</li>
               <li>Produce HMAC-SHA256 signatures for request authentication (shared-secret schemes)</li>
@@ -237,42 +235,23 @@
 
             <div class="hr"></div>
 
-            <div class="h2">How It Works</div>
-            <div class="muted" style="margin-top:8px">
-              Input text is converted to bytes in your browser, then hashed using standard digest algorithms. Where supported,
-              modern browsers use the Web Crypto APIs for consistent results. Encoders/decoders perform deterministic transforms
-              (Base64, URL, Hex, HTML entities, ROT13) so you can round-trip values and confirm outputs without sending data anywhere.
-            </div>
+            <h3 class="h3" style="margin:14px 0 8px 0;">How it works</h3>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
+              Input text is converted to bytes in your browser, then hashed using standard digest algorithms. Where supported, modern browsers use the Web Crypto APIs for consistent results. Encoders/decoders perform deterministic transforms (Base64, URL, Hex, HTML entities, ROT13) so you can round-trip values and confirm outputs without sending data anywhere.
+            </p>
 
             <div class="hr"></div>
 
-            <div class="h2">Features</div>
-            <ul class="list" style="margin-top:8px">
-              <li>MD5, SHA-1, SHA-256, SHA-384, SHA-512 hashing</li>
-              <li>HMAC-SHA256 generation</li>
-              <li>Base64, URL, Hex, HTML entity transforms, ROT13</li>
-              <li>Local-first processing (no uploads)</li>
-              <li>Copy-friendly outputs for tickets and runbooks</li>
-            </ul>
+            <h3 class="h3" style="margin:14px 0 8px 0;">FAQ</h3>
 
-            <div class="hr"></div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Does this tool upload my input or store it?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">No. Hashing and encoding run locally in your browser and are not persisted by the tool.</p>
 
-            <div class="h2">Frequently Asked Questions</div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Why do my hashes differ from another site?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">Differences usually come from hidden whitespace, newline style (LF vs CRLF), or text encoding. Try trimming or normalizing input before comparing.</p>
 
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Does this tool upload my input or store it?</div>
-              <div class="muted" style="margin-top:6px">No. Hashing and encoding run locally in your browser and are not persisted by the tool.</div>
-            </div>
-
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Why do my hashes differ from another site?</div>
-              <div class="muted" style="margin-top:6px">Differences usually come from hidden whitespace, newline style (LF vs CRLF), or text encoding. Try trimming or normalizing input before comparing.</div>
-            </div>
-
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Can I hash files instead of text?</div>
-              <div class="muted" style="margin-top:6px">This page is optimized for text and clipboard workflows. If you need file hashing, add a file picker and stream the file bytes through the same digest functions.</div>
-            </div>
+            <h4 class="h4" style="margin:10px 0 6px 0;">Can I hash files instead of text?</h4>
+            <p class="muted" style="margin:0; line-height:1.6;">This page is optimized for text and clipboard workflows. If you need file hashing, add a file picker and stream the file bytes through the same digest functions.</p>
 
           </div>
         </section>
