--- a/json-to-typescript.html
+++ b/json-to-typescript.html
@@ -184,52 +184,47 @@
           </div>
 
         </section>
-      </div>
-    </main>
+       <section class="card">
+          <div class="pad">
 
-    <section style="padding:0 0 26px;">
-      <div class="card">
-        <div class="pad">
-          <div class="h1">About this tool</div>
+            <h2 class="h2" style="margin:0 0 8px 0;">About this tool</h2>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
+              Convert raw JSON into clean TypeScript interfaces or type aliases instantly. This free online JSON to TypeScript generator runs entirely in your browser — no uploads and no server-side processing. It’s built for frontend developers and API consumers who want fast, accurate typings for real-world responses, configs, and payloads.
+            </p>
 
-          <div class="muted">
-            Convert raw JSON into clean TypeScript interfaces or type aliases instantly. This free online JSON to TypeScript generator runs entirely in your browser — no uploads and no server-side processing. It’s built for frontend developers and API consumers who want fast, accurate typings for real-world responses, configs, and payloads.
+            <div class="hr"></div>
+
+            <h3 class="h3" style="margin:14px 0 8px 0;">Common use cases</h3>
+            <ul class="muted" style="margin:0 0 12px 18px; line-height:1.7;">
+              <li>Generate TypeScript interfaces from API responses</li>
+              <li>Create typed models for React, Angular, or Node projects</li>
+              <li>Turn backend JSON payloads into frontend-safe type definitions</li>
+              <li>Sanity-check object shape before implementation</li>
+              <li>Speed up schema modeling during prototyping</li>
+            </ul>
+
+            <div class="hr"></div>
+
+            <h3 class="h3" style="margin:14px 0 8px 0;">How it works</h3>
+            <p class="muted" style="margin:0 0 12px 0; line-height:1.6;">
+              The generator parses valid JSON and infers TypeScript types from values: primitives map to string/number/boolean, nested objects become nested interfaces/types, and arrays are typed based on detected structure. Because it runs locally in your browser, your JSON never leaves your device.
+            </p>
+
+            <div class="hr"></div>
+
+            <h3 class="h3" style="margin:14px 0 8px 0;">FAQ</h3>
+
+            <h4 class="h4" style="margin:10px 0 6px 0;">Does this send JSON to a server?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">No — parsing and type generation run locally in your browser.</p>
+
+            <h4 class="h4" style="margin:10px 0 6px 0;">Can it handle nested or complex JSON?</h4>
+            <p class="muted" style="margin:0 0 10px 0; line-height:1.6;">Yes. Nested objects and arrays are converted into properly typed interfaces/types.</p>
+
+            <h4 class="h4" style="margin:10px 0 6px 0;">What if my JSON is invalid?</h4>
+            <p class="muted" style="margin:0; line-height:1.6;">The generator requires valid JSON. Fix the syntax and run Generate again.</p>
+
           </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">Common use cases</div>
-          <ul class="muted" style="margin:8px 0 0 18px; padding:0;">
-            <li>Generate TypeScript interfaces from API responses</li>
-            <li>Create typed models for React, Angular, or Node projects</li>
-            <li>Turn backend JSON payloads into frontend-safe type definitions</li>
-            <li>Sanity-check object shape before implementation</li>
-            <li>Speed up schema modeling during prototyping</li>
-          </ul>
-
-          <div class="hr"></div>
-
-          <div class="h2">How it works</div>
-          <div class="muted">
-            The generator parses valid JSON and infers TypeScript types from values: primitives map to string/number/boolean, nested objects become nested interfaces/types, and arrays are typed based on detected structure. Because it runs locally in your browser, your JSON never leaves your device.
-          </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">FAQ</div>
-
-          <div class="muted" style="margin-top:8px"><strong>Does this send JSON to a server?</strong><br>
-            No — parsing and type generation run locally in your browser.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>Can it handle nested or complex JSON?</strong><br>
-            Yes. Nested objects and arrays are converted into properly typed interfaces/types.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>What if my JSON is invalid?</strong><br>
-            The generator requires valid JSON. Fix the syntax and run Generate again.
-          </div>
-        </div>
+        </section>
       </div>
     </section>
 
